--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://mouseball54.github.io/image-multi-view",
+  "homepage": "https://mouseball54.github.io/image_multi_view/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "tsc",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist -b gh-pages"
   },
   "dependencies": {
     "react": "^18.2.0",
