--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tiff": "^7.1.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
