--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tiff": "^7.1.0",
+    "utif": "^3.1.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
