(Add) opencv 설치치

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "deploy": "gh-pages -d dist -b gh-pages"
   },
   "dependencies": {
+    "opencv-ts": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tiff": "^7.1.0",
